fix heading and add letter spacing

--- a/Assignment 3/P3/style.css
+++ b/Assignment 3/P3/style.css
@@ -13,7 +13,12 @@ body {
   min-width: 1000px;
   max-width: 1400px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 10px;   /* font size*/
+  line-height: 1.6; /*line to hight*/
+  letter-spacing: 0.2px; ;
+  word-spacing: 0.1px;
+  background-color: #fff;
+  color: 333;
   
 }
 
@@ -49,4 +54,14 @@ header, footer {
   border-bottom: 5px solid #a66;
 }
 
-/* WRITE YOUR CODE BELOW HERE */
+/* Headings */
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Courier New', Courier, monospace;
+  letter-spacing: 0.5px;
+
+}
+h1{
+  font-size: 2.0rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
